[gd_scene load_steps=6 format=3 uid="uid://bhjaelk2v3euu"]

[ext_resource type="Script" path="res://scripts/player/bullet.gd" id="1_xqhhu"]
[ext_resource type="Texture2D" uid="uid://2ipuot0ms6t" path="res://assests/player/sBullet_strip2_laser.png" id="2_4t8ju"]
[ext_resource type="Texture2D" uid="uid://m267uqw4mb07" path="res://assests/player/sBullet_strip2_water.png" id="3_rxxpd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5frr"]
size = Vector2(22, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbc2l"]
size = Vector2(22, 8)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_xqhhu")
water = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4t8ju")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("3_rxxpd")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_t5frr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_bbc2l")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
